# timge

./: .pre-commit-config.yaml  LICENSE  docker-compose.yml  package-lock.json  run-local.sh  timge.conf
.github/nginx/: timge.conf
.github/vpn/: config.ovpn
.github/workflows/: deploy.yml  main.yml  vpn-test.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/libraries/multilift/: __init__.py  liftover.py  main.py  msa.py  runtime_test.py  test.py  utils.py
backend/multilift/: apps.py  parser.py  urls.py  views.py
backend/timge/: apps.py  urls.py  views.py
backend/timge/utils/: heatmap.py  tile.py
backend/timge/utils/diffStructure/: main.py  test.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: assembly.ts  defaultSession.ts  globals.css  layout.tsx  page.tsx  rpcWorker.ts  tracks.ts
web/components/: AssemblyForm.tsx  BarForm.tsx  ChordForm.tsx  DropdownButton.tsx  DropdownMenu.tsx  EditableLabel.tsx  FileUpload.tsx  FileUploadForm.tsx  FileViewerPanel.tsx  FileViewerPanelContextMenu.tsx  Form.tsx  GlobalForm.tsx  Header.tsx  LineForm.tsx  ParentView.tsx  RingForm.tsx  ScatterForm.tsx  Sidebar.tsx  TrackFileUpload.tsx  TrackSelectorModal.tsx  TrackUploadForm.tsx
web/docs/: getting-started.md  multilift.md  overview.md  vrise.md
web/public/: MHV-WTdORF2_Alb651 (1).fa  MHV.M_mean.bedgraph  MHV_PS.bed  OC43_PS.bed  OC43atcc (3).fa  OC43atcc.dp.bp  OC43atcc.fa.fai  SRR6388155_SPLASH_WSN_ligase_2.clusters.bedpe  WSN.fodor.fasta  WSN.fodor.fasta.fai  consensus.fa  consensus.fa.fai  (+1 more)
(+54 files in other folders)
