[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mithun Sri <mithunsrina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
pre-commit = "^4.0.1"
ruff = "^0.8.3"
django-cors-headers = "^4.6.0"
biopython = "^1.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
